# cc-forever

./: Dockerfile  README.md  docker-compose.yml  idea_routes.py  main.py  pyproject.toml  supervisord.conf
backend/: .gitignore  generate_manifest.py  idea_routes.py  image_gen_test.py  main.py  pyproject.toml  requirements.txt  s3_routes.py  stats_routes.py  validation_test.py
backend/services/: blocks.py  claude.py  ideas.py  s3interface.py  state.py
backend/services/resources/: modifiers.py
backend/services/resources/minesweeper/: main.js
backend/services/resources/platformer/: main.js
backend/services/resources/snake/: main.js
backend/services/resources/stacker/: main.js
client/: README.md  bts.jsonc  package.json
client/apps/web/: index.html  package.json
client/apps/web/src/: index.css  main.tsx  routeTree.gen.ts
client/apps/web/src/components/: agent-logs.tsx  agents-sheet.tsx  game-selection.tsx  header.tsx  mode-toggle.tsx  next-queue.tsx  sheet-provider.tsx
client/apps/web/src/lib/: api.ts
client/apps/web/src/routes/: __root.tsx  games.tsx  index.tsx  play.$timestamp.$gameId.tsx  second.tsx  third.tsx
services/: claude.py  ideas.py
thoughts/shared/plans/: 2025-11-22-refactor-idea-queue-to-shared-state.md
