[project]
name = "cc-forever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "bs4>=0.0.2",
    "claude-agent-sdk>=0.1.9",
    "docker>=7.1.0",
    "docker-py>=1.10.6",
    "fastapi>=0.121.3",
    "flask>=3.1.2",
    "google-genai>=1.52.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
